--- a/CSS/fonts.css
+++ b/CSS/fonts.css
@@ -1,18 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;800&display=swap');
+
 .topnav {
-	
-font-family: Comfortaa;
-text-align: center;
-color: black;
+    font-family: Comfortaa;
+    text-align: center;
+    color: black;
 }
-
 h1 {
-	text-align: center;
-	color: black;
-	font-family: Oxygen, sans-serif;
+    text-align: center;
+    color: black;
+    font-family: Oxygen, sans-serif;
+}
+p {
+    text-align: center;
+    color: black;
+    font-family: Oxygen, sans-serif;
+}
+.copy-button {
+    border: none;
+    background-color: #4078ff;
+    padding: 7px 14px;
+    border-radius: 10px;
+    color: white;
+    font-family: "Open Sans";
+	font-weight: 800;
+	transition: top ease 0.5s;
 }
 
-p {
-		text-align: center;
-	color: black;
-	font-family: Oxygen, sans-serif;
+.copy-button:hover {
+	top: -10px;
 }
