--- a/CSS/fonts.css
+++ b/CSS/fonts.css
@@ -24,7 +24,9 @@ p {
     font-family: "Open Sans";
 	font-weight: 800;
 	transition: top ease 0.5s;
-	top: 0
+	top: 0;
+	cursor: pointer;
+	position: relative;
 }
 
 .copy-button:hover {
